<resources>
    <string name="app_name">iNeed</string>
    <string name="api">https://data-test.ineedapp.com:443/assistant/v1/</string>
    <string name="api_image">https://data-test.ineedapp.com:443/images/v1/upload</string>
    <string name="stripe_key">pk_test_Ssx2xsAFAb3pWZixAL45PJt7</string>
    <string name="project_number">AIzaSyCVSt1Y2maQ4WMSdgr7FLU0hCXMIhDFqXE</string>
    <string name="hockeyapp_key">fda23b837b792b7b4262a24ac90cc753</string>
    <string name="image_url">https://data-test.ineedapp.com/images/v1/images/</string>
    <string name="next">Next</string>
    <string name="ineed">iNeed</string>
    <string name="need_something">Need something?</string>
    <string name="make_request">Make a request and we\'ll get it done.</string>
    <string name="were_here">We\'re here to help!</string>
    <string name="strapline">iNeed is everyone\'s personal assistant.\nOur network of assistants are always\n here to help.</string>
    <string name="strapline_requests">Make a request for anything you need.\nMost people tend to request things that are important but tedious - like booking, buying, sending or repairing.</string>
    <string name="requests">Requests</string>
    <string name="create_request">Create Request</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search for businesses and tasks</string>
    <string name="button_positive">Ok</string>
    <string name="button_negative">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="strapline_welcome">Create a free account with your name, email &amp; mobile and link your payment details which makes paying for goods &amp; services ordered through iNeed incredibly easy.</string>
    <string name="strapline_welcome2">Most requests to iNeed are free. Complex requests may incur an assistant fee and where a service has a cost you pay for the services costs plus a small admin/handling fee.</string>
    <string name="strapline_welcome3">We will always ask you to approve costs before we go ahead.</string>
    <string name="create_account">Create Account</string>
    <string name="existing_account">Existing Account</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="create_account_text">We use your email and mobile number to\nsend you request messages and receipts.</string>
    <string name="signin">Sign in</string>
    <string name="error1">Please enter an email address</string>
    <string name="error2">Please enter a valid email address</string>
    <string name="error3">Please enter your mobile number</string>
    <string name="error4">Please enter a valid mobile number</string>
    <string name="error5">Please enter a password</string>
    <string name="error6">Email address already registered</string>
    <string name="error7">Invalid Email address or Password</string>
    <string name="error9">Please enter your First Name</string>
    <string name="error10">Please enter your Surname</string>
    <string name="creating_account">Creating account...</string>
    <string name="validating_details">Validating Details...</string>
    <string name="signing_in">Signing in...</string>
    <string name="link_payment">Link Payment</string>
    <string name="link_payment1">Securely &amp; easily pay providers.</string>
    <string name="link_payment2">By linking your payment details to iNeed, you can quickly and easily pay for goods and services.</string>
    <string name="link_payment3">Transactions are securely handles by Stripe who also work with:</string>
    <string name="scan_card">Scan your card</string>
    <string name="or_enter_below">or enter below</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Expiry MM/YY</string>
    <string name="card_cvv">CVV</string>
    <string name="enter_card_number">Enter your card\'s number</string>
    <string name="enter_card_expiry">Enter your card\'s expiry date MM/YY</string>
    <string name="enter_card_cvv">Enter your card\'s CVV number</string>
    <string name="validating_card">Validating your card...</string>
    <string name="requests1">You\'ll be able to see all your\nrequests and their status here.</string>
    <string name="requests2">Your Assistant\nat iNeed</string>
    <string name="requests3">Your request and\nlast message</string>
    <string name="requests4">Status and\nupdate time</string>
    <string name="requests5">Create a General Request or choose from the\nRequest Menu</string>
    <string name="make_new_request">Make Request</string>
    <string name="more_details">More details</string>
    <string name="now">Now</string>
    <string name="select_location">Select your location</string>
    <string name="change_location">Change Location</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="error8">Please enter a value for %s</string>
    <string name="general">General</string>
    <string name="fetching_requests">Fetching Requests...</string>
    <string name="credit">Credit: £%.2f</string>
    <string name="credit_expires">Expires: %s</string>
    <string name="card_last">**** **** **** %s</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete_request_message">Delete Request %s?</string>
    <string name="send">Send</string>
    <string name="new_message">New Message</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="send_picture">Send an Attachement</string>
    <string name="take_picture">Take a picture</string>
    <string name="choose_library">Choose from Image Library</string>
    <string name="record_request">Record Audio</string>
    <string name="record_video">Record a Video</string>
    <string name="cancel">Cancel</string>
    <string name="sending_request">Sending request...</string>
    <string name="front_strap1">EVERYONE\'S PERSONAL ASSISTANT</string>
    <string name="front_strap2">Ask for anything you need and your assigned personal assistant will be in touch to help.</string>
    <string name="front_strap3">We only work with trusted retailers &amp; providers including;</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="agree_text1">By creating an iNeed account, you agree to our</string>
    <string name="agree_terms">Terms</string>
    <string name="agree_text2">and that you have read our</string>
    <string name="agree_privacy">Privacy Policy</string>
    <string name="requests_no_account">Creat your free account now to start making requests</string>
    <string name="back">Back</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="loading">Loading...</string>
</resources>
