<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:background="#efeff4"
            android:padding="20dp"
            android:layout_margin="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editFirstName"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:autoText="false"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:padding="10dp"
                android:inputType="textPersonName" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editSurname"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:autoText="true"
                android:layout_marginBottom="10dp"
                android:hint="@string/surname"
                android:padding="10dp"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/buttonNext"
                android:text="@string/create_account"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/button_green"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_text1"
            android:textColor="#000"
            android:textSize="12sp"
            android:gravity="center_horizontal" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms"
                android:textColor="#0000ff"
                android:textSize="12sp"
                android:id="@+id/textTerms"
                android:layout_marginRight="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_text2"
                android:textColor="#000"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_privacy"
                android:textColor="#0000ff"
                android:textSize="12sp"
                android:id="@+id/textPrivacy"
                android:singleLine="true"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>