<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:background="#efeff4"
            android:padding="20dp"
            android:layout_margin="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editEmail"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:autoText="false"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editMobile"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_corner"
                android:autoText="true"
                android:layout_marginBottom="10dp"
                android:hint="@string/mobile"
                android:inputType="number"
                android:padding="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPassword"
                android:layout_gravity="center_horizontal"
                android:autoText="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_corner"
                android:padding="10dp" />
            <Button
                android:id="@+id/buttonNext"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/button_green"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#000"
            android:id="@+id/textView1" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#4fb182"
        android:id="@+id/signin" />

</LinearLayout>