<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Onramp2Activity"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/textView4"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strapline_welcome"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="13sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textIsSelectable="true" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/welcome_tuyorial"
            android:adjustViewBounds="true"
            android:maxWidth="300dip"
            android:layout_weight="0.1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strapline_welcome2"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="13sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strapline_welcome3"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_green"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />

</LinearLayout>