<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFF"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0.5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ineed"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:text="@string/front_strap1"
                android:layout_gravity="center_horizontal"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_strap2"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:textColor="#000"
                android:textSize="16sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_strap3"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="10sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/layoutWrapper"
        android:orientation="vertical">
        <WebView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/webview"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonNext"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_green"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />


</LinearLayout>
